<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_common"
    android:visibility="gone" >

    <fragment
        android:id="@+id/navigation_common"
        android:name="eu.ahammer.dieweltdertausendabenteuer.view.common.CommonFragment"
        android:label="@string/title_common"
        tools:layout="@layout/common_fragment" />

    <fragment
        android:id="@+id/navigation_items"
        android:name="eu.ahammer.dieweltdertausendabenteuer.view.items.ItemsFragment"
        android:label="@string/title_items"
        tools:layout="@layout/items_fragment" />

    <fragment
        android:id="@+id/navigation_hints"
        android:name="eu.ahammer.dieweltdertausendabenteuer.view.hints.HintsFragment"
        android:label="@string/title_hints"
        tools:layout="@layout/hints_fragment" />

    <fragment
        android:id="@+id/navigation_fight"
        android:name="eu.ahammer.dieweltdertausendabenteuer.view.fight.FightFragment"
        android:label="@string/title_fight"
        tools:layout="@layout/fight_fragment" />

</navigation>