<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fight.FightFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fightTextButtonsNumbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/choose_a_number"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp">

                <Button
                    android:id="@+id/fightButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_text_1"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:backgroundTint="@color/brown_primary"/>

                <Button
                    android:id="@+id/fightButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_text_2"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:backgroundTint="@color/brown_primary"/>

                <Button
                    android:id="@+id/fightButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_text_3"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:backgroundTint="@color/brown_primary"/>

                <Button
                    android:id="@+id/fightButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_text_4"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:backgroundTint="@color/brown_primary"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginTop="-8dp">

                <Button
                    android:id="@+id/fightButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_text_5"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:backgroundTint="@color/brown_primary"/>

                <Button
                    android:id="@+id/fightButton6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_text_6"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:backgroundTint="@color/brown_primary"/>

                <Button
                    android:id="@+id/fightButton7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_text_7"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:backgroundTint="@color/brown_primary"/>

                <Button
                    android:id="@+id/fightButton8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_text_8"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:backgroundTint="@color/brown_primary"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/fightTextButtonsCharacters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_char"
            android:layout_marginStart="4dp"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/fightButtonA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:text="@string/button_text_A"
                android:backgroundTint="@color/brown_primary"/>

            <Button
                android:id="@+id/fightButtonB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:text="@string/button_text_B"
                android:backgroundTint="@color/brown_primary"/>

            <Button
                android:id="@+id/fightButtonC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:text="@string/button_text_C"
                android:backgroundTint="@color/brown_primary"/>

            <Button
                android:id="@+id/fightButtonD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:text="@string/button_text_D"
                android:backgroundTint="@color/brown_primary"/>

            <Button
                android:id="@+id/fightButtonE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:text="@string/button_text_E"
                android:backgroundTint="@color/brown_primary"/>

        </LinearLayout>

        <TextView
            android:id="@+id/fightTextButtonFigth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/do_fight"
            android:layout_marginStart="4dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/fightButtonFight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/fight"
            android:backgroundTint="@color/brown_primary"/>

        <ImageView
            android:id="@+id/fightResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/sword_empty" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>