<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:elevation="0dp"
    app:cardBackgroundColor="@color/brown_secondary" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="4dp"
        android:background="@drawable/border"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum=".9">

            <TextView
                android:id="@+id/hintName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:text="@string/default_hint_text"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/hintEditButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight=".1"
            android:contentDescription="@string/button_edit"
            android:src="@drawable/pen" />

        <ImageView
            android:id="@+id/hintDeleteButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight=".1"
            android:contentDescription="@string/button_delete"
            android:src="@drawable/trash" />

    </LinearLayout>
</androidx.cardview.widget.CardView>